# Parking-Space-Detector-Using-Cuda

./: .gitignore  CMakeLists.txt  README.md
data/: sample
src/: kernels.cu  kernels.cuh  main.cu
src/image_filter/: kernels.cu  kernels.cuh  main.cu
tools/: extract_frame.py  parking_generator.py
